* Minor update: (220806)
- Add support for QTS 5.0.0 App Center.

* Minor update: (201219b)
- Ensure app icon is enabled in QTS 4.5.1.

* Minor update: (201219)
- Add support for QTS 4.5.1 App Center.

** Major update: (180331)
- Switched to version-agnostic CSS patch.
- Thanks to Christophe from the Qnapclub Store for the suggestion!

* Minor update: (180330)
- Add system log entry. If patching fails, also record QTS version.

** Major update: (180328)
- Don't backup original file if backup exists.
- Now compatible with QTS 4.3.4

* Minor update: (180326)
- Changed package icon.

* Initial release: (180325)
- First public release.